--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,5 @@
 {
     "name": "softcatala/wp-theme-mover",
     "type": "wordpress-plugin",
-    "description": "Extension to provide an additional location for themes",
-    "extra": {
-        "branch-alias": {
-            "dev-master": "0.1.0"
-        }
-    }
+    "description": "Extension to provide an additional location for themes"
 }
